<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar7"
        android:layout_width="414dp"
        android:layout_height="54dp"
        android:background="@android:color/holo_red_light"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/verbs"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="0.15" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/resta"
        tools:layout_editor_absoluteY="513dp" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/multiplicacion"
        tools:layout_editor_absoluteY="78dp" />

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="368dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/suma" />

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/division"
        tools:layout_editor_absoluteY="220dp" />

    <Button
        android:id="@+id/subtraction3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/Subtraction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toBottomOf="@+id/count3" />

    <Button
        android:id="@+id/count3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="76dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/Addition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/addition3" />

    <Button
        android:id="@+id/addition3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="84dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/division"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/pattern3" />

    <Button
        android:id="@+id/pattern3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/multiplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        tools:layout_editor_absoluteY="118dp" />
</androidx.constraintlayout.widget.ConstraintLayout>